[metadata]
name = hashlist
version = 0.0.5
author = Doomdie
author_email = doomdie.info@yahoo.com
description = Easy way to create and manage hash lists
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/1Doomdie1/hashlist
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src