[metadata]
name = hashlist
version = 0.0.8
author = Doomdie
author_email = doomdie.info@yahoo.com
description = Easy way to create and manage hash lists
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/1Doomdie1/hashlist
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src